Source/ThirdParty/ANGLE/src/libANGLE/renderer/driver_utils.h
@@ -164,6 +164,14 @@ inline bool IsFuchsia()
 #endif
 }
 
+inline bool IsIOS()
+{
+#if defined(ANGLE_PLATFORM_IOS)
+    return true;
+#else
+    return false;
+#endif
+}
 struct OSVersion
 {
     OSVersion();
